# UCIA_ObjectDetection-II

./: .gitignore  .gitmodules  COPIL-1avril-2025.odt  README.md  main.py  makefile  pyproject.toml
Doc/: UCIA-IA-DetectionObj-II_V1.0.odt
Processing/: ProcessResults.py
RPi4_v3.0/ucia/: history_2025-01-02.txt  history_2025-04-17.txt  readme.jlc
Training/: eval_YOLOv8.py  predict_YOLOv8.py  process_results.py  train_YOLOv8.py
Training/Results/: processed_res-v1.0-a.txt  processed_res-v1.0.txt  processed_res-v1.1.txt  processed_res-v1.2.txt  processed_res-v1.3.txt  processed_res-v1.6a.txt  processed_res-v1.6b.txt  processed_res-v1.7.txt  processed_res-v1.8.txt  results_yolov8n-v1.3.txt  results_yolov8n-v1.6.txt  results_yolov8n-v1.6a.txt  results_yolov8n-v1.6b.txt  results_yolov8n-v1.7.txt  results_yolov8n-v1.8.txt  results_yolov8s-v1.0-a.txt  results_yolov8s-v1.0.txt  results_yolov8s-v1.1.txt  results_yolov8s-v1.2.txt  results_yolov8s-v1.3.txt
dataset/labels/: objets3D-006.txt  objets3D-010.txt  objets3D-021.txt
datasets/: README.roboflow.txt
datasets/V1.0-yolo8_280train-72val-15test/: README.roboflow.txt  data.yaml
datasets/V1.0-yolo8_280train_72val_15test/: data.yaml
datasets/V1.0_yolo8_150train-21eval-9test/: README.dataset.txt  README.roboflow.txt
datasets/V1.0_yolo8_162train-27val-13test/: README.dataset.txt  README.roboflow.txt  data.yaml
datasets/V1.0_yolo8_166train-24val-13test/: README.roboflow.txt  data.yaml
datasets/V1.0_yolo8_248train-84val-0test/: data.yaml  (+1 more)
utils/: split_dataset.py  xml_to_yolo.py
yolo_split_dataset/: data.yaml
(+1899 files in other folders)
